# DotKeeper

./: .cursorignore  .editorconfig  .gitignore  .ignorewords  .markdownlint.yaml  .pre-commit-config.yaml  .prettierrc  LICENSE  README.md  pyproject.toml
scripts/: activate  add  setup_op
scripts/vscode/: on_save
src/dotkeeper/: __init__.py  __main__.py  cli.py  config.py  models.py
tests/: conftest.py
tests/dotkeeper/: test_cli.py
